# claude_test

./: agent1_documenter.py  agent2_canonical.py  agent3_pbi_design.py  agent3a_semantic_model.py  agent3b_report.py  download_report_png.js  math_utils.py  test_math_utils.py  viya_login_test.js
.claude/: mcp.json
docs/cbf97b0a-457d-4b4f-8913-547e0cdf390c/: calculations.json  canonical_model.json  data_sources.json  documentation.md  elements.json  filters.json  metadata.json  report_dictionary.md  screenshots_manifest.json  sections.json  visuals.json
fabric_mcp/: conftest.py  pyproject.toml  requirements.txt  server.py  test_claude_generated_dataset.py  test_pbi_deploy.py  test_server.py
pbi/Retail_Insights/: manifest.json
pbi/Retail_Insights.pbip/: Retail_Insights.pbip
pbi/Retail_Insights.pbip/Retail_Insights.Report/: .platform  definition.pbir
pbi/Retail_Insights.pbip/Retail_Insights.Report/definition/: report.json
pbi/Retail_Insights.pbip/Retail_Insights.SemanticModel/: .platform
pbi/Retail_Insights.pbip/Retail_Insights.SemanticModel/definition/: database.tmdl  model.tmdl
pbi/Retail_Insights/Retail_Insights.Report/: report.json
pbi/Retail_Insights/Retail_Insights.SemanticModel/: .platform  definition.pbism
pbi/Retail_Insights/Retail_Insights.SemanticModel/definition/: database.tmdl  model.tmdl
pbir_test/: definition.pbir
pbir_test/definition/: report.json  version.json
pbir_test/definition/pages/: pages.json
pbir_test/definition/pages/test_page/: page.json
sas_va_mcp/: pyproject.toml  requirements.txt  server.py
(+38 files in other folders)
