[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sas-va-mcp"
version = "0.1.0"
description = "SAS Visual Analytics MCP Server for VA → Power BI migration"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
]

[project.scripts]
sas-va-mcp = "sas_va_mcp.server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["sas_va_mcp"]
